nodered/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gps-node-red
  namespace: nodered
spec:
  selector:
    app: gps-node-red
  ports:
  - name: http
    port: 80
    targetPort: 1880
  type: LoadBalancer
