nodered/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gps-node-red-ingress
  namespace: nodered
spec:
  rules:
  - host: output of kubectl get svc external ip
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-web-app-service
            port:
              name: http
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-web-app-network-policy
  namespace: nodered
spec:
  podSelector:
    matchLabels:
      app: my-web-app
  ingress:
  - from:
    - ipBlock:
        cidr: 130.211.0.0/22
    ports:
    - protocol: TCP
      port: 1880
